# TimeSeries

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
backend/: CMakeLists.txt
backend/include/core/: ts_arima.h
backend/include/utils/: matrix_ops.h
backend/src/core/: ts_arima.cpp
backend/src/utils/: matrix_ops.cpp
backend/tests/: test_arima.cpp
bindings/: CMakeLists.txt  tsx_bind.cpp
frontend/tests/: test_arima.py
frontend/tsx/: __init__.py  setup.py
scripts/: build.sh  test.sh
